Added additional BO points for test procedure 8.2.5.2.2.

--- a/device.ini
+++ b/device.ini
@@ -16,7 +16,7 @@ tcp.device.address = 127.0.0.1
 tcp.device.port = 20000
 
 # IP address of the network adapter on which to capture pcaps
-tcp.capture.adapter = 
+tcp.capture.adapter = /0.0.0.0
 
 ################################################################################
 # link-layer options
@@ -32,7 +32,7 @@ link.destination = 1024
 link.num.retry = 3
 
 # Link layer timeout in milliseconds min: 100
-link.timeout.ms = 900
+link.timeout.ms = 1000
 
 ################################################################################
 # Outstation application layer options
@@ -125,6 +125,66 @@ control.latchAndPulsePoint.onTime.ms = 900
 
 # Off time in ms min: 0 max: 65535
 control.latchAndPulsePoint.offTime.ms = 1000
+
+# Optional single function point supported function code Pulse On/NUL (0x01).
+control.singleFunctionPulseOnPoint.index = 5
+
+# Valid count for Group12Var1 min: 1 max: 255
+control.singleFunctionPulseOnPoint.count = 25
+
+# On time in ms min: 0 max: 65535
+control.singleFunctionPulseOnPoint.onTime.ms = 1100
+
+# Off time in ms min: 0 max: 65535
+control.singleFunctionPulseOnPoint.offTime.ms = 1200
+
+# Optional single function point supported function code Latch On/NUL (0x03).
+control.singleFunctionLatchOnPoint.index = 6
+
+# Valid count for Group12Var1 min: 1 max: 255
+control.singleFunctionLatchOnPoint.count = 30
+
+# On time in ms min: 0 max: 65535
+control.singleFunctionLatchOnPoint.onTime.ms = 1300
+
+# Off time in ms min: 0 max: 65535
+control.singleFunctionLatchOnPoint.offTime.ms = 1400
+
+# Optional single function point supported function code Latch Off/NUL (0x04).
+control.singleFunctionLatchOffPoint.index = 7
+
+# Valid count for Group12Var1 min: 1 max: 255
+control.singleFunctionLatchOffPoint.count = 35
+
+# On time in ms min: 0 max: 65535
+control.singleFunctionLatchOffPoint.onTime.ms = 1500
+
+# Off time in ms min: 0 max: 65535
+control.singleFunctionLatchOffPoint.offTime.ms = 1600
+
+# Optional single function point supported function code Pulse On/Close (0x41).
+control.singleFunctionPulseOnClosePoint.index = 8
+
+# Valid count for Group12Var1 min: 1 max: 255
+control.singleFunctionPulseOnClosePoint.count = 40
+
+# On time in ms min: 0 max: 65535
+control.singleFunctionPulseOnClosePoint.onTime.ms = 1700
+
+# Off time in ms min: 0 max: 65535
+control.singleFunctionPulseOnClosePoint.offTime.ms = 1800
+
+# Optional single function point supported function code Pulse On/Trip (0x81).
+control.singleFunctionPulseOnTripPoint.index = 9
+
+# Valid count for Group12Var1 min: 1 max: 255
+control.singleFunctionPulseOnTripPoint.count = 45
+
+# On time in ms min: 0 max: 65535
+control.singleFunctionPulseOnTripPoint.onTime.ms = 1900
+
+# Off time in ms min: 0 max: 65535
+control.singleFunctionPulseOnTripPoint.offTime.ms = 2000
 
 ################################################################################
 # Options related to analog outputs (g41)
@@ -236,7 +296,7 @@ binaryInput.binaryEventsClass = 1
 # Options related to Double-bit inputs (g3 and g4)
 ################################################################################
 
-# Number of Double-bit Input Events that will be generated manually.
+# Number of Double-bit Input Events that will be generated manually. min: 1
 doubleBitInput.numDoubleBitEventsGenerated = 3
 
 # Double-bit Input Events class assignment. min: 1 max: 3
@@ -256,7 +316,7 @@ counter.counterEventsClass = 2
 # Options related to analog inputs (g30 and g32)
 ################################################################################
 
-# Counter Events class assignment. min: 1 max: 3
+# Analog Input Events class assignment. min: 1 max: 3
 analogInput.analogInputEventsClass = 3
 
 ################################################################################
@@ -266,7 +326,7 @@ analogInput.analogInputEventsClass = 3
 # Unsolicited confirmation timeout value (in ms) min: 1
 unsolicited.unsolicitedConfirmTimeoutMs = 5000
 
-# Other Master address where unsolicited responses can be configured to send to min: 0, max:0xFFEF
+# Other Master address where unsolicited responses can be configured to send to min: 0 max: 65519
 unsolicited.otherMasterAddress = 2
 
 # Does the device supports a minimum amount of event data before sending an unsolicited response?
@@ -357,3 +417,5 @@ supports.individualRemoteSupervisoryControl = true
 # Does the DUT has a configurable fragment size?
 supports.configurableFragmentSize = true
 
+# Does the DUT supports unsolicited responses?
+supports.unsolicitedResponse = true
