--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 
 
     <properties>
-        <scala.version>2.12.0</scala.version>
+        <scala.version>2.12.11</scala.version>
         <opendnp3.version>2.3.1-SNAPSHOT</opendnp3.version>
         <dnp4s.version>0.1.0-SNAPSHOT</dnp4s.version>
 
-        <maven.scala-plugin.version>3.4.6</maven.scala-plugin.version>
+        <maven.scala-plugin.version>4.3.1</maven.scala-plugin.version>
+        <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     </properties>
 
     <build>
@@ -50,6 +51,30 @@
                     <jvmArgs>
                         <jvmArg>-Xmx1024m</jvmArg>
                     </jvmArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${exec-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>com.automatak.dnp4sopendnp3.Main</argument>
+                        <argument>-config</argument>
+                        <argument>device.ini</argument>
+                        <argument>-run</argument>
+                        <argument>all</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
