Added pcap capture in device.ini.

--- a/device.ini
+++ b/device.ini
@@ -16,7 +16,7 @@ tcp.device.address = 127.0.0.1
 tcp.device.port = 20000
 
 # IP address of the network adapter on which to capture pcaps
-tcp.capture.adapter =
+tcp.capture.adapter = /127.0.0.1
 
 ################################################################################
 # link-layer options
